2009-03-13  delx
	* Remove character caching code. Testing shows the drawing to run just
	  as fast without it. This reduces code complexity and colour reproduction
	  bug that was triggered by changing OSX's ColorSync calibration profiles,
	  eg when switching to a new monitor. It also makes operations that would
	  previously have required clearing the cache happen faster.
	* Fixed high density background colors:
	  $ echo -ne '\e[46m LD \e[106m HI \e[00m\n'
	* Refactored the selection handling. It no longer touches VT100Screen,
	  instead keeping a copy of the start & end points of the current and last
	  drawn selection. This saves [PTYTextView drawRect] from having to treat
	  all characters in the scrollback buffer as dirty.

2009-03-07  delx
	* Dramatically improve scrolling speed, iTerm no longer redraws the
	  whole terminal when scrolled, only the lines that have changed
	* Scroll on new input stops/starts on pushing home/end respectively
	* Set magic defaults to allow antialiasing on small fonts. Previously
	  even if antialiasing was enabled in iTerm, OSX would force it off
	  for smaller fonts. You can do this manually from the Info panel.
	* Cleaned up [PTYTextView drawRect]

2009-02-09  delx
	* Corrected xterm mouse scroll wheel button reporting (#2254084)

2009-02-07  delx
	* Fixed rendering bug with bold characters
	* Restore window title bar colour when leaving sendInputToAllTabs

2009-01-16  delx
	* Terminal window title bar displays "Session" if an empty title is set
	* Makefile ensures that permissions on build products are correct

2008-11-24  delx
	* ITConfigPanel can now only set transparency in integer multiples
	* ITConfigPanel font spacing now snaps to ticks

2008-11-21  delx
	* Fixed the screen blanking bug on setWindowTitle (#2188028)
	* Improved the layout of ITConfigPanel
	* Removed "Use transparency" button from ITConfigPanel as it was causing
	  confusion. To disable transparency just set it to 0%.

2008-10-23	fabian
